@@ -1,6 +1,6 @@
 /*******************************************************************************
- * Created by Carlos Yaconi.
- * Copyright 2011 Fork Ltd. All rights reserved.
+ * Created by Carlos Yaconi
+ * Copyright 2012 Fork Ltd. All rights reserved.
  * License: GPLv3
  * Full license at "/LICENSE"
  ******************************************************************************/
@@ -16,7 +16,7 @@ public class ReportActionResponse {
 	private String postUrl;
 
 	public void addAction(String actionName, String active) {
-		boolean isActive = new Boolean(active);
+		//boolean isActive = Boolean.valueOf(active);
 		PreyAction action = PreyAction.getActionFromName(actionName);
 		// if (isActive && action != null)
 		if (action != null)
