@@ -1,19 +1,26 @@
 /*******************************************************************************
- * Created by Carlos Yaconi.
- * Copyright 2011 Fork Ltd. All rights reserved.
+ * Created by Carlos Yaconi
+ * Copyright 2012 Fork Ltd. All rights reserved.
  * License: GPLv3
  * Full license at "/LICENSE"
  ******************************************************************************/
 package com.prey.actions.observer;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.Hashtable;
+import java.util.List;
 import java.util.Random;
 
 import android.content.Context;
 
+
+import com.prey.PreyLogger;
 import com.prey.actions.PreyAction;
+import com.prey.actions.PreyExecutionWaitNotify;
+
+import com.prey.actions.compare.CompareAction;
 
 /**
  * This class is a representation of a related actions needed to be run - and
@@ -26,6 +33,7 @@ public class JobsGroup {
 
 	private Hashtable<Long,ActionJob> actionModules;
 	private Hashtable<Long,ActionJob> reportModules;
+	private List<ActionJob> modules;
 	private long id;
 	private long creationTime;
 	private boolean running;
@@ -57,19 +65,47 @@ public class JobsGroup {
 		this.creationTime = System.currentTimeMillis();
 		this.syncResults = new ArrayList<ActionResult>();
 		this.runningJobs = new Hashtable<Long,Thread>();
+		this.modules = new ArrayList<ActionJob>();
 	}
 
 	public void addJobToGroup(ActionJob job) {
 		if (job.isReportModuleJob())
-			this.reportModules.put(new Long(job.getId()), job);
+			this.reportModules.put(Long.valueOf(job.getId()), job);
 		else
-			this.actionModules.put(new Long(job.getId()), job);
+			this.actionModules.put(Long.valueOf(job.getId()), job);
+		this.modules.add(job);
 	}
 
 	public void run(JobsQueue queue, boolean isMissing) {
 		this.queue = queue;
-		Enumeration<Long> actionModulesJobId = this.actionModules.keys();
-		Long jobId;
+		//Enumeration<Long> actionModulesJobId = this.actionModules.keys();
+		//Long jobId;
+		PreyExecutionWaitNotify waitNotifyPriority = new PreyExecutionWaitNotify();
+		Collections.sort(this.modules, new CompareAction());
+		Long syncJobId;
+		for (ActionJob actionJob : this.modules) {
+			//actions
+			if (!actionJob.isReportModuleJob()){				
+				if (actionJob.getAction().getPriority()>0){
+					syncJobId=actionJob.getId();					
+					Thread actionJobRun = new Thread(new PreyActionRunner(actionJob, ctx,waitNotifyPriority), syncJobId.toString());
+					actionJobRun.start();					 
+				}else{
+					new Thread(actionJob).start();
+				}
+			}else{
+				//reports
+				if (isMissing){
+					syncJobId=actionJob.getId();
+					Thread actionJobRun = new Thread(new PreyActionRunner(actionJob, ctx,waitNotifyPriority), syncJobId.toString());
+					actionJobRun.start();
+					this.runningJobs.put(syncJobId, actionJobRun);
+				}
+			}
+				
+		}
+		waitNotifyPriority.doNotify();
+		/*
 		while (actionModulesJobId.hasMoreElements()) {
 			jobId = (Long) actionModulesJobId.nextElement();
 			new Thread((ActionJob) this.actionModules.get(jobId)).start();
@@ -84,12 +120,12 @@ public class JobsGroup {
 				// Only syncjobs are added to the running jobs list
 				this.runningJobs.put(syncJobId, actionJobRun);
 			}
-		}
+		}*/
 	}
 
 	public void jobFinished(ActionJob job) {
 		this.syncResults.add(job.getResult());
-		this.runningJobs.remove(new Long(job.getId()));
+		this.runningJobs.remove(Long.valueOf(job.getId()));
 		if (this.runningJobs.isEmpty())
 			this.queue.groupFinished(this, this.ctx);
 	}
@@ -129,4 +165,30 @@ public class JobsGroup {
 		}
 	}
 
+	 class PreyActionRunner implements Runnable {
+		  private ActionJob actionJob;
+		  private Context ctx;
+		  private PreyExecutionWaitNotify waitNotifyPriority ;
+		  public PreyActionRunner(ActionJob actionJob, Context ctx,PreyExecutionWaitNotify waitNotifyPriority ){
+			  this.actionJob=actionJob;
+			  this.ctx=ctx;
+			  this.waitNotifyPriority=waitNotifyPriority;
+		  }
+		
+			public void run() {
+				try {				
+					PreyAction action=actionJob.getAction();
+					PreyLogger.i(action.getClass().getName()+" Esperando el action:");		
+					waitNotifyPriority.doWait();		
+					PreyLogger.i(action.getClass().getName()+" Ejecutando el action:");
+					action.execute(actionJob, this.ctx);	 
+					PreyLogger.i(action.getClass().getName()+" termino el execute el action:");
+					waitNotifyPriority.doNotify();
+				} catch (Exception e) {
+					e.printStackTrace();
+				}
+			}
+			  
+	}
+	 
 }
